Главное, что изменилось по сравнению с проектом на с++ - valera стал List'ом (valera: vector -> List)

--- a/curs2(c-sharp)/curs2(c-sharp).csproj
+++ b/curs2(c-sharp)/curs2(c-sharp).csproj
@@ -46,16 +46,68 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Doc1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Doc1.Designer.cs">
+      <DependentUpon>Doc1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="doctor.cs" />
+    <Compile Include="doc_enter.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="doc_enter.Designer.cs">
+      <DependentUpon>doc_enter.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ISaveOpros.cs" />
+    <Compile Include="opr.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="opr.Designer.cs">
+      <DependentUpon>opr.cs</DependentUpon>
+    </Compile>
+    <Compile Include="opros1.cs" />
+    <Compile Include="Opros2.cs" />
+    <Compile Include="Opros3.cs" />
+    <Compile Include="oproscheck.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="oproscheck.Designer.cs">
+      <DependentUpon>oproscheck.cs</DependentUpon>
+    </Compile>
+    <Compile Include="pat1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pat1.Designer.cs">
+      <DependentUpon>pat1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="patient.cs" />
+    <Compile Include="person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Doc1.resx">
+      <DependentUpon>Doc1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="doc_enter.resx">
+      <DependentUpon>doc_enter.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="opr.resx">
+      <DependentUpon>opr.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="oproscheck.resx">
+      <DependentUpon>oproscheck.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pat1.resx">
+      <DependentUpon>pat1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
